@@ -99,7 +99,7 @@ public class ArticleQueryServiceTest extends DbTestBase {
         queryService.findRecentArticles(null, null, null, new Page(), user);
     Assertions.assertEquals(recentArticles.getCount(), 2);
     Assertions.assertEquals(recentArticles.getArticleDatas().size(), 2);
-    Assertions.assertEquals(recentArticles.getArticleDatas().get(0).getId(), article.getId());
+    Assertions.assertEquals(recentArticles.getArticleDatas().getFirst().getId(), article.getId());
 
     ArticleDataList nodata =
         queryService.findRecentArticles(null, null, null, new Page(2, 10), user);
@@ -123,7 +123,7 @@ public class ArticleQueryServiceTest extends DbTestBase {
         queryService.findRecentArticlesWithCursor(
             null, null, null, new CursorPageParameter<>(null, 20, Direction.NEXT), user);
     Assertions.assertEquals(recentArticles.getData().size(), 2);
-    Assertions.assertEquals(recentArticles.getData().get(0).getId(), article.getId());
+    Assertions.assertEquals(recentArticles.getData().getFirst().getId(), article.getId());
 
     CursorPager<ArticleData> nodata =
         queryService.findRecentArticlesWithCursor(
@@ -174,7 +174,7 @@ public class ArticleQueryServiceTest extends DbTestBase {
             null, null, anotherUser.getUsername(), new Page(), anotherUser);
     Assertions.assertEquals(recentArticles.getArticleDatas().size(), 1);
     Assertions.assertEquals(recentArticles.getCount(), 1);
-    ArticleData articleData = recentArticles.getArticleDatas().get(0);
+    ArticleData articleData = recentArticles.getArticleDatas().getFirst();
     Assertions.assertEquals(articleData.getId(), article.getId());
     Assertions.assertEquals(articleData.getFavoritesCount(), 1);
     Assertions.assertTrue(articleData.isFavorited());
@@ -190,7 +190,7 @@ public class ArticleQueryServiceTest extends DbTestBase {
         queryService.findRecentArticles("spring", null, null, new Page(), user);
     Assertions.assertEquals(recentArticles.getArticleDatas().size(), 1);
     Assertions.assertEquals(recentArticles.getCount(), 1);
-    Assertions.assertEquals(recentArticles.getArticleDatas().get(0).getId(), article.getId());
+    Assertions.assertEquals(recentArticles.getArticleDatas().getFirst().getId(), article.getId());
 
     ArticleDataList notag = queryService.findRecentArticles("notag", null, null, new Page(), user);
     Assertions.assertEquals(notag.getCount(), 0);
@@ -207,7 +207,7 @@ public class ArticleQueryServiceTest extends DbTestBase {
     ArticleDataList recentArticles =
         queryService.findRecentArticles(null, null, null, new Page(), anotherUser);
     Assertions.assertEquals(recentArticles.getCount(), 1);
-    ArticleData articleData = recentArticles.getArticleDatas().get(0);
+    ArticleData articleData = recentArticles.getArticleDatas().getFirst();
     Assertions.assertTrue(articleData.getProfileData().isFollowing());
   }
 
@@ -224,7 +224,7 @@ public class ArticleQueryServiceTest extends DbTestBase {
 
     ArticleDataList anotherUserFeed = queryService.findUserFeed(anotherUser, new Page());
     Assertions.assertEquals(anotherUserFeed.getCount(), 1);
-    ArticleData articleData = anotherUserFeed.getArticleDatas().get(0);
+    ArticleData articleData = anotherUserFeed.getArticleDatas().getFirst();
     Assertions.assertTrue(articleData.getProfileData().isFollowing());
   }
 }
